fix: update next.js and react dependencies to patch vulnerabilities

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.10",
+    "next": "^16.1.1",
     "nextra": "^4.6.0",
     "nextra-theme-docs": "^4.6.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
